--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,16 @@ version: '3.1'
 
 services:
 
-  api: # Backend Service
+  notification-service:
+    container_name: notification-service
     build: .
-    container_name: "api"
     ports:
-      - "8080:8080"
+      - "8686:8080"
     volumes:
       - ".:/api"
 
-  db: # Database
+  db:
+    # Database
     image: postgres
     restart: always
     container_name: "database"
@@ -18,14 +19,25 @@ services:
       POSTGRES_PASSWORD: password
       POSTGRES_USER: postgres
       POSTGRES_DB: friendify-dev
-    ports: 
+    ports:
       - 5555:5432
     volumes:
-      - ./postgres/data:/var/lib/postgresql
+      - ../docker/postgres:/var/lib/postgresql
 
-  redis: # Cache
+  redis:
+    # Cache
     image: redis
     restart: always
     container_name: "redis"
     ports:
       - 6868:6379
+
+  message-broker:
+    container_name: message-broker
+    image: rabbitmq:3-management
+    environment:
+      - RABBITMQ_DEFAULT_USER=rabbitmq
+      - RABBITMQ_DEFAULT_PASS=password
+    ports:
+      - 5672:5672
+      - 15672:15672
