--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Golang config
-GORM_DSN="host=database user=postgres password=password dbname=postgres port=5432"
+GORM_DSN="host=database user=postgres password=password dbname=friendify-dev port=5432"
 DEFAULT_AVATAR=https://friendify-backup.s3.ap-southeast-1.amazonaws.com/avatars/default.png
 JWT_SECRECT="ahihihi"
 
